<resources>
    <string name="app_name">Homework1</string>
    <string name="operator">Operator:</string>
    <string name="input_hint">Integer</string>
    <string name="value_two">Value 2:</string>
    <string name="value_one">Value 1:</string>
    <string name="button_calculate">Calculate</string>
    <string-array name="operations">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>÷</item>
    </string-array>
</resources>
