<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operator"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="start|center_vertical"
        android:text="@string/operator"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_two" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_value_two"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/input_hint"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/value_two"
        app:layout_constraintTop_toBottomOf="@+id/input_value_one" />

    <TextView
        android:id="@+id/value_two"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="start|center_vertical"
        android:text="@string/value_two"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_one" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="106dp"
        android:layout_height="51dp"
        android:text="@string/button_calculate"
        android:onClick="calculateAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator" />

    <TextView
        android:id="@+id/value_one"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="start|center_vertical"
        android:text="@string/value_one"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_value_one"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/input_hint"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/value_one"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/select_operator"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/operator"
        app:layout_constraintTop_toBottomOf="@+id/input_value_two" />

    <TextView
        android:id="@+id/output_value"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="start|center_vertical"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_calculate"
        app:layout_constraintTop_toBottomOf="@+id/select_operator" />

</androidx.constraintlayout.widget.ConstraintLayout>